[package]
name = "fedimint-escrow-client"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-escrow is a escrow example fedimint module."
license = "MIT"

[lib]
name = "fedimint_escrow_client"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
fedimint-escrow-common ={ path = "../fedimint-escrow-common" }
fedimint-client = { workspace = true }
fedimint-core ={ workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
rand = { workspace = true }
secp256k1 = {workspace = true}
serde = { workspace = true }
strum = {workspace = true}
strum_macros = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
threshold_crypto = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }