[package]
name = "fedimint-escrow-client"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-escrow is a escrow example fedimint module."
license = "MIT"

[lib]
name = "fedimint_escrow_client"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
fedimint-escrow-common ={ path = "../fedimint-escrow-common" }
fedimint-escrow-server = { path = "../fedimint-escrow-server" }
fedimint-client = { workspace = true }
fedimint-core ={ workspace = true }
futures = { workspace = true }
erased-serde = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
threshold_crypto = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
serde_json = "1.0.120"
rust_decimal = "1.35"
random-string = "1.1.0"
async-stream = "0.3.5"
clap = "4.5.8"

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }

# [features]
# cli = ["../fedimint-escrow-client/cli"]