[package]
name = "fedimint-escrow-common"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-escrow is a escrow example fedimint module."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_escrow_common"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin_hashes = "0.14.0"
erased-serde = { workspace = true }
futures = { workspace = true }
fedimint-core ={ workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.8"
hex = "0.4.3"
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
threshold_crypto = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
bitcoin = { workspace = true }
