[package]
name = "fedimint-escrow-server"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-escrow is a escrow example fedimint module."
license = "MIT"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "tokio_unstable"]

[lib]
name = "fedimint_escrow_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin_hashes = "0.14.0"
erased-serde = { workspace = true }
futures = { workspace = true }
fedimint-core = { workspace = true }
fedimint-escrow-common = { path = "../fedimint-escrow-common" }
rand = { workspace = true }
serde = { workspace = true }
secp256k1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
fedimint-server = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.26.0", features = ["sync"] }
chrono = "0.4.38"
sha2 = "0.10.8"
