[package]
name = "fedimint-escrow-tests"
version = "0.2.1"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-escrow is a escrow example fedimint module."
license = "MIT"
publish = false

[[test]]
name = "fedimint_escrow_tests"
path = "tests/tests.rs"

[dependencies]
anyhow = { workspace = true }
fedimint-client = { workspace = true }
fedimint-core = { workspace = true }
fedimint-escrow-client = { path = "../fedimint-escrow-client" }
fedimint-escrow-common = { path = "../fedimint-escrow-common" }
fedimint-escrow-server = { path = "../fedimint-escrow-server" }
fedimint-logging = { workspace = true }
fedimint-server = { workspace = true }
fedimint-testing = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
tokio = { version = "1.26.0", features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
threshold_crypto = { workspace = true }
