[package]
name = "fedimintd-custom"
version = "0.3.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimintd with custom module set"

[[bin]]
name = "fedimintd"
path = "src/fedimintd.rs"

[dependencies]
anyhow = { workspace = true }
fedimintd = { workspace = true }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
fedimint-escrow-server = { path = "../fedimint-escrow-server" }
fedimint-escrow-common = { path = "../fedimint-escrow-common" }
fedimint-core = { workspace = true }

[build-dependencies]
fedimint-build = { git = "https://github.com/fedimint/fedimint" }